--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Postgrad student at Trinity College Dublin."
   location         : "Dublin, Ireland"
-  email            : "Kumarv1@tcd.ie","vishalkumartcd@gmail.com"
+  email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
